# University

./: README.md
COSC 261/Assignments/Part 1/: ply-scanner.py  scanner.py
COSC 261/Assignments/Part 2/: parser.out  parser.py  parsetab.py  ply-parser.py  program.py  tree.py
COSC 261/Assignments/Part 3/: Program.j  compiler.py  program.py
COSC 262/Assignments/Assignment 1/: Assignment 1.py
COSC 262/Assignments/Assignment 2/: COSC 262 - Assignment 2 - 58520526.rar  GraphTest.py  Results.txt  Test.py  convexhull.py  convexhull_time.py  results - Copy.csv  results.csv
COSC 264/Assignments/Program/: client.py  server.py
COSC 363/Assignments/Assignment 1/: CMakeLists.txt  crate1.tga  crate2.tga  main-Wibbles.cpp  main.cpp  main.h  wall.tga
COSC 363/Assignments/Assignment 2/: CMakeLists.txt  main.cpp
COSC 363/Assignments/Assignment 2/Documentation/: COSC 363 - Ass2.docx
COSC 363/Assignments/Assignment 2/Functions/: QuarticSolver.cpp  QuarticSolver.h  Ray.cpp  Ray.h  SceneObject.cpp  SceneObject.h  TextureBMP.cpp  TextureBMP.h
COSC 363/Assignments/Assignment 2/Models/: Cone.cpp  Cone.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h  Tetrahedron.cpp  Tetrahedron.h  Torus.cpp  Torus.h  Triangle.cpp  Triangle.h
COSC 364/Assignments/: COSC 364.docx
COSC 364/Assignments/COSC364-CPlex-Flow-Planning/: README.md  analyser.py  main.py  scrape.py
COSC 364/Assignments/COSC364_Assignment1/: LICENSE  README.md  classes.py  config.txt  config_parse-Wibbles.py  (+8 more)
ENCE 260/: CMakeLists.txt
ENCE 260/ence260-ucfk4/: labs.rar
(+82 files in other folders)
